another 'fix' for slow touch on iphone

--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,6 @@ i{
 	width: 100%;
 	
 }
+svg{
+	cursor: pointer;
+}
